<resources>
    <string name="app_name">yTonWallet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="use_6_pin">Use 6-Digit Passcode</string>
    <string name="use_4_pin">Use 4-Digit Passcode</string>
    <string name="title_set_pin">Set passcode</string>
    <string name="deck_set_pin">Enter the 4 digits in the passcode.</string>

    <string name="title_conf_pin">Confirm passcode</string>
    <string name="deck_conf_pin">Re-enter the 4 digits in the passcode.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_biometrics">Use Biometrics?</string>
    <string name="desc_bio">MyTonWallet uses biometric authentication to unlock and authorize transactions.</string>
    <string name="btn_enable">Enable</string>
    <string name="btn_skip">Skip</string>
    <string name="title_setpas">Set passcode</string>
    <string name="desc_welcome">Securely store and send crypto.</string>
    <string name="btn_create_wallet">Create New Wallet</string>
    <string name="btn_import_wallet">Import Existing Wallet</string>
    <string name="desc_showmnemo">Write down these 24 words in this exact order and keep them in a secure place. Do not share this list with anyone.</string>
    <string name="title_showmnemo">Your recovery phrase</string>
    <string name="btn_done">Done</string>
    <string name="desc_repeat_mnemo">Let’s check that you wrote it down correctly. Please enter the words PART, PART and PART.</string>
    <string name="title_repeat_mnemo">Let’s test</string>
    <string name="btn_continue">Continue</string>
    <string name="desc_import_mnemo_desc"><![CDATA[You can restore access to your wallet by entering the <b>24 secret words</b> that you wrote down when creating the wallet.]]></string>
    <string name="title_import_mnemo">Import wallet</string>

    <string name="title_dial_wrongmnemo">Wrong phrase</string>
    <string name="body_dial_wrongmnemo">Looks like you entered an invalid mnemonic phrase.</string>
    <string name="btn_close">Close</string>

    <string name="wrd_send">Sent</string>
    <string name="wrd_received">Received</string>
    <string name="wrd_swap">Swapped</string>
    <string name="wrd_from">From</string>
    <string name="wrd_to">To</string>
    <string name="wrd_today">Today</string>

    <string name="wrd_at">at</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="btn_swap">Swap</string>
    <string name="btn_earn">Earn</string>
    <string name="btn_send">Send</string>
    <string name="btn_add">Add</string>
    <string name="body_msg_encrypt">Message is encrypted.</string>
    <string name="btn_decrypt">Decrypt</string>
    <string name="title_price_per">Price per 1</string>

    <string name="title_amount">Amount</string>
    <string name="hint_enter_address_or_domain">Enter address or domain</string>
    <string name="wrd_message">Message</string>
    <string name="hint_enter_msg">Add a comment, if needed</string>
    <string name="text_encrypt_com">Encrypt comment</string>

</resources>