<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    tools:context=".fragments.WelcomeFrag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_238"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginVertical="@dimen/button_main_vert_margin"
            android:src="@drawable/img_ton" />

        <TextView
            android:id="@+id/textView"
            style="@style/text_big"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_welcome" />

        <Button
            android:id="@+id/welcome_frag_btn_create"
            style="@style/button_general"
            android:text="@string/btn_create_wallet" />

        <Button
            android:id="@+id/welcome_frag_btn_import"
            style="@style/button_inline"
            android:text="@string/btn_import_wallet" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>