<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    tools:context=".fragments.auth.MnemoShowFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginVertical="@dimen/button_main_vert_margin"
            android:src="@drawable/img_mnemo" />

        <TextView
            android:id="@+id/textView"
            style="@style/text_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/title_showmnemo" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_showmnemo" />

        <TableLayout
            android:id="@+id/fr_mnemoshow_table"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="@dimen/margin_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        </TableLayout>

        <Button
            android:id="@+id/fr_mnemo_btn_done"
            style="@style/button_general"
            android:text="@string/btn_done" />


    </LinearLayout>

    <ImageButton
        style="@style/button_back"
        android:id="@+id/fr_setpin_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>