<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.send.TransInputAdrFragment">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/text_toolbar_title"
        android:id="@+id/fr_trans_inpadr_toolbar"
        android:background="@color/white"
        android:layout_width="match_parent"
        app:title="@string/wrd_send"
        android:layout_height="@dimen/margin_64"
        app:menu="@menu/wallet_toolbar_menu"
        app:navigationIcon="@drawable/ic_back"
        android:elevation="1dp"/>

    <EditText
        android:id="@+id/fr_trans_inputadr_input"
        android:layout_width="match_parent"
        android:paddingHorizontal="20dp"
        android:hint="@string/hint_enter_address_or_domain"
        android:layout_height="56dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="text"
        android:background="@android:color/transparent"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/fr_trans_inpadr_toolbar"
        />

    <View
        app:layout_constraintBottom_toBottomOf="@+id/fr_trans_inputadr_input"
        style="@style/list_divider_info"
        android:layout_marginStart="0dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fr_trans_inputadr_btn"
        app:layout_constraintTop_toBottomOf="@+id/fr_trans_inputadr_input">

        <TextView
            android:id="@+id/fr_trans_inputadr_recent_title"
            style="@style/text_big"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:text="Recent"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fr_trans_inputadr_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_jetton" />

    </LinearLayout>

    <Button
        android:id="@+id/fr_trans_inputadr_btn"
        style="@style/button_general"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>