<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    tools:context=".fragments.SetPinFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="@dimen/margin_238"
        android:layout_marginBottom="162dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fr_setpin_btn_changesize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <VideoView
            android:id="@+id/newcreate_video"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:layout_marginVertical="@dimen/button_main_vert_margin"
            android:src="@drawable/img_monkey" />

        <TextView
            android:id="@+id/fr_setpin_title"
            style="@style/text_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp"
            android:text="@string/title_setpas" />

        <TextView
            android:id="@+id/fr_setpin_desc"
            style="@style/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deck_set_pin" />

        <LinearLayout
            android:id="@+id/pin_frag_dots"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/fr_setpin_btn_changesize"
        style="@style/button_inline"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_48"
        android:text="@string/use_6_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!-- im so sory about that edittext, & belive it could be
    beter way to input text clearly programmaticaly -->
    <EditText
        android:id="@+id/setpin_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        style="@style/button_back"
        android:id="@+id/fr_setpin_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>